trying to fix overlap

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 	width: 100%;
 	height: 450px;
 	background-color: aquamarine;
+	position: absolute;
 }
 
 .header_img {
